made menu elements bigger

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 
 .top-header .top-menu a{
     font-family: eds-market-bold-script, sans-serif;
+    font-size: 20px;
     color: black;
     text-decoration:none;
     margin: 10px;
