--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,15 @@
     color:#581211
 }
 
+.about-me h1{
+    font-family: eds-market-bold-script, sans-serif;
+    font-size: 40px;
+    left: 40.5%;
+    position: absolute;
+}
+
+.about-img {
+    top:20%;
+    position: absolute;
+}
+
