--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ hr{
 }
 
 .top-header .top-menu a:hover{
-    color:#581211
+    color:#581211;
+    transition: .4s ease;
 }
 
 .about-me h1{
@@ -109,6 +110,77 @@ hr{
     top:42%;
     left:-21%;
 }
+
+.portfolio-header{
+    position: absolute;
+    left: 40%;
+    text-align: center;
+}
+
+.portfolio-header h1{
+    margin: 0;
+    font-family: league-gothic, sans-serif;
+    letter-spacing: 8px;
+    font-size: 40px;
+}
+
+#vimeo-link{
+    position: absolute;
+    text-align: center;
+    left: 19%;
+    top: 50%;
+}
+
+#vimeo-link h4{
+    margin: 0;
+}
+
+#vimeo-link a{
+    margin: 0;
+    font-family: league-gothic, sans-serif;
+    letter-spacing: 3px;
+    color: black;
+    font-size: 40px;
+    text-decoration: none;
+}
+
+#vimeo-link a:hover{
+    color:#19B7EA;
+    transition: .4s ease;
+}
+
+#youtube-link{
+    position: absolute;
+    text-align: center;
+    left: 59%;
+    top: 50%;
+}
+
+#youtube-link h4{
+    margin: 0;   
+}
+
+#youtube-link a{
+    margin: 0;
+    font-family: league-gothic, sans-serif;
+    color: black;
+    letter-spacing: 3px;
+    font-size: 40px;
+    text-decoration: none;
+}
+
+#youtube-link a:hover{
+    color:#E60707;
+    transition: .4s ease;
+}
+
+#video-hr-div{
+    position: absolute;
+    width: 160%;
+    top:35%;
+    left:-31%;
+}
+
 
 
 
