--- a/styles.css
+++ b/styles.css
@@ -37,15 +37,23 @@ hr{
     transition: .4s ease;
 }
 
-.about-me h1{
-    font-family: eds-market-bold-script, sans-serif;
-    font-size: 40px;
-    left: 40.5%;
+.about-me{
     position: absolute;
+    top:1%;
+    left: 44%;
+    width: 20%;
+}
+
+.about-me h1{
+    font-family: league-gothic, sans-serif;
+    letter-spacing: 3px;
+    font-size: 40px;
+    margin: 0;
 }
 
 .about-img {
-    top:20%;
+    top:37.5%;
+    left: 13%;
     position: absolute;
 }
 
@@ -92,9 +100,15 @@ hr{
 
 #about-paragraph{
     position: absolute;
-    top:19%;
-    left:20%;
-    width: 60%;
+    top:33%;
+    left:36%;
+    width: 50%;
+}
+
+#about-paragraph p{
+    font-family: forma-djr-banner, sans-serif;
+    font-size: 21px;
+    letter-spacing: 1px;
 }
 
 #about-p{
@@ -102,6 +116,14 @@ hr{
     font-size: 20px;
     font-weight: 400;
     font-style: normal;
+}
+
+#about-hr{
+    position: absolute;
+    width: 160%;
+    top:30%;
+    left: -31%;
+
 }
 
 #hr-div{
@@ -113,8 +135,13 @@ hr{
 
 .portfolio-header{
     position: absolute;
-    left: 40%;
+    left: 40.6%;
     text-align: center;
+}
+
+#portfolio-img{
+    position: relative;
+    left: -6%;
 }
 
 .portfolio-header h1{
@@ -127,7 +154,7 @@ hr{
 #vimeo-link{
     position: absolute;
     text-align: center;
-    left: 19%;
+    left: 23%;
     top: 50%;
 }
 
@@ -152,7 +179,7 @@ hr{
 #youtube-link{
     position: absolute;
     text-align: center;
-    left: 59%;
+    left: 62%;
     top: 50%;
 }
 
