--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
+@import url("https://use.typekit.net/awp8son.css");
+
 hr{
     width: 50%;
+    border-color: black;
     clear: both;
+}
+
+body{
+    background-color: #E3B08D;
 }
 
 #logo-img{
@@ -11,13 +18,19 @@ hr{
 .top-header {
     margin: auto;
     position: absolute;
-    left: 38.5%;
+    left: 40%;
     text-align: center;
 }
 
 .top-header h1{
-    font-family: eds-market-bold-script, sans-serif;
     margin: 0;
+}
+
+.top-header #name-head{
+    font-family: los-feliz,serif;
+    font-weight: 400;
+    font-size: 40px;
+    font-style: normal;
 }
 
 .top-header .top-menu {
@@ -25,7 +38,9 @@ hr{
 }
 
 .top-header .top-menu a{
-    font-family: eds-market-bold-script, sans-serif;
+    font-family: los-feliz,serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 20px;
     color: black;
     text-decoration:none;
@@ -66,8 +81,8 @@ hr{
 
 .portfolio-images{
     position: absolute;
-    top:50%;
-    left:7%;
+    top:40%;
+    left:30%;
 }
 
 .writing-btn{
@@ -129,8 +144,12 @@ hr{
 #hr-div{
     position: absolute;
     width: 140%;
-    top:42%;
-    left:-21%;
+    top:32%;
+    left:-20%;
+}
+
+#hr-div hr{
+    background-color: black;
 }
 
 .portfolio-header{
@@ -206,6 +225,36 @@ hr{
     width: 160%;
     top:35%;
     left:-31%;
+}
+
+.extras{
+    position: absolute;
+    top:110%;
+    left:30%;
+}
+
+#extra-hr-div{
+    position: absolute;
+    width: 100%;
+    top:102%;
+    left:-1%;
+}
+
+.extras .extra-btn .overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 98.5%;
+    width: 100%;
+    opacity: 0;
+    background-color: #581211;
+}
+
+.extras .extra-btn:hover .overlay{
+    transition: .5s ease;
+    opacity: 50%;
 }
 
 
